src/objects/Options__c.object
<CustomObject>
    <description>Options related to particular questions</description>
    <fields>
        <fullName>OId__c</fullName>
        <description>Option Id</description>
        <label>OId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QID1__c</fullName>
        <formula>Question__r.Qid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QID1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QID__c</fullName>
        <label>QID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>Questions__c</referenceTo>
        <relationshipLabel>Options</relationshipLabel>
        <relationshipName>Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Options</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Options</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>